added install-wallet.sh
